2011-06-21  Ulrich Drepper  <drepper@gmail.com>

	* inet/getnetgrent_r.c: Use DL_CALL_FCT in several places.

2011-06-20  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc32/dl-plt.h: Protect against multiple
	inclusions.
	* sysdeps/sparc/sparc64/dl-plt.h: Likewise.

	* sysdeps/i386/dl-irel.h (elf_ifunc_invoke): New.
	(elf_irel): Use it.
	* sysdeps/powerpc/powerpc32/dl-irel.h: Likewise.
	* sysdeps/powerpc/powerpc64/dl-irel.h: Likewise.
	* sysdeps/sparc/sparc32/dl-irel.h: Likewise.
	* sysdeps/sparc/sparc64/dl-irel.h: Likewise.
	* sysdeps/x86_64/dl-irel.h: Likewise.

	* elf/dl-runtime.c: Use elf_ifunc_invoke.
	* elf/dl-sym.c: Likewise.

2011-06-15  Ulrich Drepper  <drepper@gmail.com>

	* resolv/res_send.c (__libc_res_nsend): Fix typos in last patch.  We
	need to dereference resplen2.

2011-06-14  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/wordsize-64/dl-fxstatat64.c: New file.

2011-06-15  Ulrich Drepper  <drepper@gmail.com>

	* Makeconfig: Define vardbdir and inst_vardbdir.
	* nss/Makefile: Add rules to install db-Makefile.

	* nss/nss_db/db-XXX.c: Cleanup.

	* nss/Makefile (libnss_db-dbs): Add db-initgroups.
	* nss/Versions [libnss_db]: Add _nss_db_initgroups_dyn for
	GLIBC_PRIVATE.
	* nss/db-Makefile (groups.db): Emit entries for initgroups lookups.
	* nss/makedb.c: Implement -g option to specify that value strings
	are generated and should not be added to table iterated over for
	get*ent calls.
	* nss/nss_db/db-initgroups.c: New file.

	* nss/getent.c: Add support for initgroups lookups through getgrouplist
	interface.

	* grp/initgroups.c (__nss_initgroups_database): Renamed and exported.
	(internal_getgrouplist): Adjust to name change.
	Update use_initgroups_entry if this is not the first call.
	* nss/databases.def: Add initgroups entry.

	* nss/makedb.c (compute_tables): Check result of multiple hash table
	sizes to minimize maximum chain length.

2011-06-14  Ulrich Drepper  <drepper@gmail.com>
